--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content:flex-start;
+  gap: 10px; 
+  width: 100%;
+  height: auto;
+  align-items:top;
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+.flex-container > div {
+  background-color:green;
   color: white;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+  flex: 1; 
+}
+.flex-container > div:hover {
+  background-color: yellow;
+  font-size: 18px;
+  opacity: 0.5;
 }
 
-.App-link {
-  color: #61dafb;
+.background {
+  background-image: url('./assets/back1.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 800px;
+  background-repeat: no-repeat;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.font{
+  font-style: italic;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-shadow: 3px 3px black;
+
+}
+
+@media (max-width : 800px){
+  div.flex-container{
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.text{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 40px;
+  color:blue;
+  text-align: center;
+
+}
+.round-corners1{
+  border-radius: 15px 50px 30px 5px;;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;  
+}
+.round-corners2{
+  border-radius: 15px 50px 30px;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;  
+}
+.round-corners3{
+  border-radius:  15px 50px;
+  padding: 20px; 
+  width: 200px;
+  height: 150px; 
+}
+.round-corners4{
+  border-radius: 15px;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;  
 }
